--- a/.github/workflows/MoveShape2023.yml
+++ b/.github/workflows/MoveShape2023.yml
@@ -1,5 +1,7 @@
 name: Build and deploy .NET Core application to Web App MoveShape2023
 on:
+  workflow_dispatch:
+  
   push:
     branches:
     - MoveShapeAndWhiteBoard
@@ -8,7 +10,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: .\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
-  WORKING_DIRECTORY: .
+  WORKING_DIRECTORY: .\MoveShape
 jobs:
   build:
     runs-on: windows-latest
