--- a/.github/workflows/WhiteBoard1024.yml
+++ b/.github/workflows/WhiteBoard1024.yml
@@ -1,19 +1,17 @@
-name: Build and deploy .NET Core application to Web App MoveShape2023
+name: Build and deploy .NET Core application to Web App WhiteBoard1024
 on:
-  workflow_dispatch:
-  
   push:
     paths:
-      - 'MoveShape/**'
+      - 'WhiteBoard/**'
     branches:
     - main
     - MoveShapeAndWhiteBoard
 env:
-  AZURE_WEBAPP_NAME: MoveShape2023
+  AZURE_WEBAPP_NAME: WhiteBoard1024
   AZURE_WEBAPP_PACKAGE_PATH: .\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
-  WORKING_DIRECTORY: .\MoveShape
+  WORKING_DIRECTORY: .\WhiteBoard
 jobs:
   build:
     runs-on: windows-latest
@@ -49,5 +47,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.MoveShape2023_49D7 }}
+        publish-profile: ${{ secrets.WhiteBoard1024_CC63 }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
