Added emoji button and call to built in windows emoji picker

--- a/WindowsFormsSample/WindowsFormsSample/WindowsFormsSample.csproj
+++ b/WindowsFormsSample/WindowsFormsSample/WindowsFormsSample.csproj
@@ -10,5 +10,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.24" />
+    <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
+    <PackageReference Include="Uno.UI" Version="4.10.26" />
   </ItemGroup>
 </Project>
