--- a/SignalRConsoleClient/SignalRConsoleClient.csproj
+++ b/SignalRConsoleClient/SignalRConsoleClient.csproj
@@ -15,7 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+    <PackageReference Include="Spectre.Console" Version="0.47.0" />
   </ItemGroup>
 
 </Project>
